@@ -47,14 +47,14 @@ commands = {'atz' : 'ELM327 v1.2',
             '0111' : '41 11 26',
             '0112' : '41 12 01',
             '0113' : '41 13 88',
-            '0114' : '41 14 55 66',
-            '0115' : '41 15 55 66',
-            '0116' : '41 16 55 66',
-            '0117' : '41 17 55 66',
-            '0118' : '41 18 55 66',
-            '0119' : '41 19 55 66',
-            '011A' : '41 1A 55 66',
-            '011B' : '41 1B 55 66',
+            '0114' : '41 14 55 99',
+            '0115' : '41 15 55 98',
+            '0116' : '41 16 55 99',
+            '0117' : '41 17 55 98',
+            '0118' : '41 18 55 99',
+            '0119' : '41 19 55 98',
+            '011A' : '41 1A 55 99',
+            '011B' : '41 1B 55 97',
             '011C' : '41 1C 06',
             '011D' : '41 1D 45',
             '011E' : '41 1E 80',
@@ -83,14 +83,14 @@ commands = {'atz' : 'ELM327 v1.2',
             '0211' : '42 11 26',
             '0212' : '42 12 01',
             '0213' : '42 13 88',
-            '0214' : '42 14 55 66',
-            '0215' : '42 15 55 66',
-            '0216' : '42 16 55 66',
-            '0217' : '42 17 55 66',
-            '0218' : '42 18 55 66',
-            '0219' : '42 19 55 66',
-            '021A' : '42 1A 55 66',
-            '021B' : '42 1B 55 66',
+            '0214' : '42 14 55 AA',
+            '0215' : '42 15 55 BA',
+            '0216' : '42 16 55 BB',
+            '0217' : '42 17 55 AB',
+            '0218' : '42 18 55 AC',
+            '0219' : '42 19 55 A3',
+            '021A' : '42 1A 55 B3',
+            '021B' : '42 1B 55 AA',
             '021C' : '42 1C 06',
             '021D' : '42 1D 45',
             '021E' : '42 1E 80',
@@ -123,14 +123,14 @@ alternate_commands = {'atz' : 'ELM327 v1.2',
             '0111' : '41 11 45',
             '0112' : '41 12 22',
             '0113' : '41 13 55',
-            '0114' : '41 14 55 66',
-            '0115' : '41 15 55 66',
-            '0116' : '41 16 55 66',
-            '0117' : '41 17 55 66',
-            '0118' : '41 18 55 66',
-            '0119' : '41 19 55 66',
-            '011A' : '41 1A 55 66',
-            '011B' : '41 1B 55 66',
+            '0114' : '41 14 55 AA',
+            '0115' : '41 15 55 AB',
+            '0116' : '41 16 55 AA',
+            '0117' : '41 17 55 AC',
+            '0118' : '41 18 55 A9',
+            '0119' : '41 19 55 AA',
+            '011A' : '41 1A 55 AB',
+            '011B' : '41 1B 55 AA',
             '011C' : '41 1C 06',
             '011D' : '41 1D 23',
             '011E' : '41 1E 80',
